WOrking on BoardGame views

--- a/app/views/board_games/edit.html.erb
+++ b/app/views/board_games/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>BoardGames#edit</h1>
-<p>Find me in app/views/board_games/edit.html.erb</p>
+<h1>Edit <%= @board_game.title %></h1>
+<%= render 'form', board_game: @board_game  %>
