--- a/app/views/board_games/new.html.erb
+++ b/app/views/board_games/new.html.erb
@@ -1,2 +1,2 @@
-<h1>BoardGames#new</h1>
-<p>Find me in app/views/board_games/new.html.erb</p>
+<h1>Add a New Board Game!</h1>
+<%= render 'form', board_game: @board_game  %>
