--- a/app/views/designers/new.html.erb
+++ b/app/views/designers/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Designers#new</h1>
-<p>Find me in app/views/designers/new.html.erb</p>
+<h1>Add New Designer</h1>
+<%= render 'board_game_makers/form', board_game_maker: @board_game_maker %>
