--- a/app/views/board_games/show.html.erb
+++ b/app/views/board_games/show.html.erb
@@ -1,2 +1,13 @@
-<h1>BoardGames#show</h1>
-<p>Find me in app/views/board_games/show.html.erb</p>
+<h1><%= @board_game.title %></h1>
+<table>
+  <%= render 'display_board_game', board_game: @board_game %>
+  <tr>
+    <td>
+      <div class="bg-links">
+        <%= link_to "Edit #{@board_game.title}", edit_board_game_path(@board_game) %>
+        <%= link_to "All Reviews of #{@board_game.title}", board_game_reviews_path(@board_game) %>
+        <%= link_to 'Add a Review', new_board_game_review_path(@board_game) %>
+      </div>
+    </td>
+  </tr>
+</table>
