--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Reviews#index</h1>
-<p>Find me in app/views/reviews/index.html.erb</p>
+<h1>
+  <% if @nested_resource.is_a? BoardGame %>
+    Reviews for <%= @nested_resource.title %>
+  <% else %>
+    <%= nested_resource.email %>'s Reviews
+  <% end %>
+</h1>
+<table>
+  <% @reviews.each do |r| %>
+    <tr>
+      <td>
+        <strong><%= review_subject(r) %></strong>
+      </td><td>
+        <strong>Rating: </strong><%= r.rating %>/10
+      </td>
+    </tr><tr>
+      <td>
+        <%= r.review_text %>
+      </td>
+    </tr><tr><td><br /></td></tr>
+  <% end %>
+</table>
