Working on board_game_maker views

--- a/app/views/publishers/new.html.erb
+++ b/app/views/publishers/new.html.erb
@@ -1,2 +1,2 @@
-<h1>Publishers#new</h1>
-<p>Find me in app/views/publishers/new.html.erb</p>
+<h1>Add New Publisher</h1>
+<%= render 'board_game_makers/form', board_game_maker: @board_game_maker %>
