--- a/app/views/designers/edit.html.erb
+++ b/app/views/designers/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>Designers#edit</h1>
-<p>Find me in app/views/designers/edit.html.erb</p>
+<h1>Edit <%= @board_game_maker.name %></h1>
+<%= render 'board_game_makers/form', board_game_maker: @board_game_maker %>
