--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Artists#index</h1>
-<p>Find me in app/views/artists/index.html.erb</p>
+<h1>Artists</h1>
+<div class="artists list">
+  <ul> 
+    <% @artists.each do |a| %>
+      <li><%= link_to a.name, artist_path(a) %></li>
+    <% end %>
+  </ul>
+</div>
