--- a/app/views/designers/show.html.erb
+++ b/app/views/designers/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Designers#show</h1>
-<p>Find me in app/views/designers/show.html.erb</p>
+<h1><%= @designer.name %></h1>
+<% unless @designer.board_games.empty? %>
+<div class="designer info">
+  <strong>Average Rating for a <%= @designer.name %> Board Game: <%= @designer.average_rating %></strong><br />
+  <strong>Highest Rated <%= @designer.name %> Board Game:</strong>
+    <%= hr = @designer.highest_rated_board_game; link_to hr.title, board_game_path(hr) %>
+    <%= "Rating: #{hr.average_rating}/10" %>
+</div>
+<% end %>
+<div class="designer buttons">
+  <%= button_to "Edit #{@designer.name}", edit_designer_path(@designer), method: 'get' %>
+  <%= button_to "All #{@designer.name} Board Games", designer_board_games_path(@designer), method: 'get' %>
+  <%= button_to "All #{@designer.name} Reviews", designer_reviews_path(@designer), method: 'get' %>
+</div>
