--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -7,7 +7,7 @@
   <strong>Average Rating for a <%= @category.name %> Board Game: <%= @category.average_rating %></strong><br />
   <strong>Highest Rated <%= @category.name %> Board Game:</strong>
     <%= hr = @category.highest_rated_board_game; link_to hr.title, board_game_path(hr) %>
-    <%= "Rating: #{hr.average_rating}/10" %>
+    <%= "Rating: #{hr.average_rating.round(2)}/10" %>
 </div>
 <% end %>
 <div class="category buttons">
