--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,22 @@
   </head>
 
   <body>
+    <nav class="topnav">
+      <ul class="navbar">
+        <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'Board Games', board_games_path %></li>
+        <li><%= link_to 'Categories', categories_path %></li>
+        <li><%= link_to 'Designers', designers_path %></li>
+        <li><%= link_to 'Publishers', publishers_path %></li>
+        <li><%= link_to 'Artists', artists_path %></li>
+        <% if current_user %>
+          <li><%= link_to 'Your Profile', user_path(current_user) %>
+          <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+        <% else %>
+          <li><%= link_to 'Login', login_path %></li>
+          <li><%= link_to 'Sign Up', sign_up_path %></li>
+        <% end %>
+    </nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
