--- a/app/views/board_games/index.html.erb
+++ b/app/views/board_games/index.html.erb
@@ -6,6 +6,11 @@
   <% end%>
   Board Games
 </h1>
+<% if !@nested_resource %>
+  <div class="bg new-button">
+    <%= button_to 'Add New Board Game', new_board_game_path, method: :get %>
+  </div>
+<% end%>
 <table>
   <% @board_games.each do |bg| %>
     <tr><td>
