Adding to User views

--- a/app/views/board_games/_display_board_game.html.erb
+++ b/app/views/board_games/_display_board_game.html.erb
@@ -1,8 +1,10 @@
 <tr><td>
+  <% if @board_game.average_rating %>
   <div class="bg-avg-rating">
     <strong>Average Rating: </strong>
     <%= @board_game.average_rating.round(2) %>/10
   </div>
+  <% end %>
   <div class="bg-categories">
     <strong>Categories: </strong>
     <% @board_game.categories.each.with_index(1) do |c, i| %>
