--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,10 @@
   <%= button_to "Edit Your Account", edit_user_registration_path, method: :get %>
   <%= button_to "Delete Your Account", cancel_user_registration_path, method: :get %>
   <%= button_to "Your Reviews", user_reviews_path(@user), method: :get %>
-<% else %>
-  Highest Rated Board Game Review: <%= r = @user.highest_rated_review; link_to "#{r.board_game.title}  #{r.rating}/10", r %>
-  Lowest Rated Board Game Review: <%= r = @user.lowest_rated_review; link_to "#{r.board_game.title}  #{r.rating}/10", r %>
+<% elsif !@user.reviews.empty? %>
+  <h3>Highest Rated Board Game Review: <%= r = @user.highest_rated_review; binding.pry; link_to "#{r.board_game.title}  #{r.rating}/10", r %></h3>
+  <h3>Lowest Rated Board Game Review: <%= r = @user.lowest_rated_review; link_to "#{r.board_game.title}  #{r.rating}/10", r %></h3>
   <%= button_to "All Reviews", user_reviews_path(@user), method: :get %>
+<% else  %>
+  <h3><%= @user.email %> hasn't made any reviews yet.</h3>
 <% end %>
