--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @user.email %></h1>
 <% if @user == current_user %>
   <%= button_to "Edit Your Account", edit_user_registration_path, method: :get %>
-  <%= button_to "Delete Your Account", cancel_user_registration_path, method: :get %>
+  <%= button_to "Delete Your Account", user_registration_path, data: {confirm: "You wish to delete your account?"}, method: :delete %>
   <%= button_to "Your Reviews", user_reviews_path(@user), method: :get %>
 <% elsif !@user.reviews.empty? %>
   <h3>Highest Rated Board Game Review: <%= r = @user.highest_rated_review; binding.pry; link_to "#{r.board_game.title}  #{r.rating}/10", r %></h3>
