--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <li><%= link_to 'Designers', designers_path %></li>
         <li><%= link_to 'Publishers', publishers_path %></li>
         <li><%= link_to 'Artists', artists_path %></li>
+        <li><%= link_to 'Users', users_path %></li>
         <% if current_user %>
           <li><%= link_to "Your Profile: #{current_user.email}", user_path(current_user) %>
           <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %>
