--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to Better Board Games!</h1>
+<h1>Welcome to Better Board Gaming!</h1>
 <div class="top-10 bg-list">
   <h3>Top 10 Highest Rated Board Games</h3>
   <ol>
